Fixed issue 10